[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scenes/Enemy/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/Enemy/ShooterEnemy/ShooterEnemyBase.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/Enemy/ShooterEnemy/EnemyBullet.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 900.0

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
bullet = ExtResource( 3 )

[node name="Sprite" parent="." index="1"]
modulate = Color( 0, 0.882353, 1, 1 )

[node name="AggroZone" type="Area2D" parent="." index="2"]

[node name="AggroZoneShape" type="CollisionShape2D" parent="AggroZone" index="0"]
shape = SubResource( 1 )

[node name="ShotCooldown" type="Timer" parent="." index="3"]
one_shot = true

[node name="FirePoint" type="Node2D" parent="." index="4"]

[connection signal="body_entered" from="AggroZone" to="." method="_on_AggroZone_body_entered"]
[connection signal="body_exited" from="AggroZone" to="." method="_on_AggroZone_body_exited"]
[connection signal="timeout" from="ShotCooldown" to="." method="_on_ShotCooldown_timeout"]
